--- a/soc.html
+++ b/soc.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,103 +8,169 @@
     <title>SOC Team - SecOps</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f0f2f5;
             margin: 0;
             padding: 0;
         }
+
         header {
-            background-color: #333;
+            background-color: #2c3e50;
             color: white;
             text-align: center;
-            padding: 1rem 0;
+            padding: 1.5rem 0;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+            font-weight: bold;
+        }
+
         section {
-            margin: 20px auto;
-            width: 80%;
+            margin: 30px auto;
+            width: 90%;
+            max-width: 1200px;
             background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.1);
         }
-        .team {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .team > div {
-            margin: 10px 0;
-            padding: 10px;
-            border: 2px solid #333;
-            border-radius: 8px;
+
+        h2 {
+            font-size: 1.8rem;
             text-align: center;
-            width: 80%;
-            background-color: #f0f0f0;
+            margin-bottom: 20px;
+            color: #2980b9;
         }
-        .team h2 {
-            margin: 0 0 10px 0;
+
+        .team {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
         }
-        .team p {
+
+        .team-member {
+            background-color: #ecf0f1;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s;
+        }
+
+        .team-member:hover {
+            transform: scale(1.05);
+        }
+
+        .team-member img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            margin-bottom: 15px;
+            border: 4px solid #2980b9;
+        }
+
+        .team-member h3 {
+            margin: 10px 0;
+            font-size: 1.3rem;
+            color: #2c3e50;
+        }
+
+        .team-member p {
             margin: 5px 0;
+            color: #34495e;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 50px;
+            padding: 20px;
+            background-color: #34495e;
+            color: white;
         }
     </style>
 </head>
+
 <body>
 
-<header>
-    <h1>Digital Track Solution SOC Team</h1>
-</header>
+    <header>
+        <h1>Digital Track Solution SOC Team</h1>
+    </header>
 
-<section>
-    <h2>Team Defender </h2>
-    <div class="team">
-        <div>
-            <h2>SOC - Team Lead</h2>
-            <p><strong>Sunil Kumar GR</strong></p>
-            <p>5 years experience</p>
+    <section>
+        <h2>Meet Our Expert Team</h2>
+        <div class="team">
+            <div class="team-member">
+                <img src="https://via.placeholder.com/100" alt="Team Lead Photo">
+                <h3>Sunil Kumar CR</h3>
+                <p><strong>Role:</strong> SOC Team Lead</p>
+                <p><strong>Experience:</strong> 5 Years</p>
+            </div>
+            <div class="team-member">
+                <img src="https://via.placeholder.com/100" alt="Akilesh Photo">
+                <h3>Akilesh</h3>
+                <p><strong>Role:</strong> Analyst 1</p>
+                <p><strong>Experience:</strong> 1.8 Years</p>
+                <p><strong>Certifications:</strong> NSE 1 & 2 (SOC)</p>
+            </div>
+            <div class="team-member">
+                <img src="https://via.placeholder.com/100" alt="Christopher Photo">
+                <h3>Christopher</h3>
+                <p><strong>Role:</strong> Analyst 2</p>
+                <p><strong>Experience:</strong> 1.8 Years</p>
+                <p><strong>Certifications:</strong> NSE 1 & 2, 45+ more (SOC)</p>
+            </div>
+            <div class="team-member">
+                <img src="https://via.placeholder.com/100" alt="Dinesh Photo">
+                <h3>Dinesh M</h3>
+                <p><strong>Role:</strong> Analyst 3</p>
+                <p><strong>Experience:</strong> 1.8 Years</p>
+                <p><strong>Certifications:</strong> NSE 1 & 2, 30+ more (SOC)</p>
+            </div>
+            <div class="team-member">
+                <img src="https://via.placeholder.com/100" alt="Deepak Photo">
+                <h3>Deepak</h3>
+                <p><strong>Role:</strong> Analyst 1</p>
+                <p><strong>Experience:</strong> 1.3 Years</p>
+                <p><strong>Certifications:</strong> NSE 1 & 2</p>
+            </div>
+            <div class="team-member">
+                <img src="https://via.placeholder.com/100" alt="Rabbani Photo">
+                <h3>Rabbani</h3>
+                <p><strong>Role:</strong> Analyst 2</p>
+                <p><strong>Experience:</strong> 1 Year</p>
+                <p><strong>Certifications:</strong> CEH</p>
+            </div>
+            <div class="team-member">
+                <img src="https://via.placeholder.com/100" alt="Apuroop Photo">
+                <h3>Apuroop</h3>
+                <p><strong>Role:</strong> Analyst 2</p>
+                <p><strong>Experience:</strong> 6 Months</p>
+                <p><strong>Certifications:</strong> ONLINE (SOC)</p>
+            </div>
+            <div class="team-member">
+                <img src="https://via.placeholder.com/100" alt="Revanth Photo">
+                <h3>Revanth</h3>
+                <p><strong>Role:</strong> Analyst 2</p>
+                <p><strong>Experience:</strong> 6 Months</p>
+                <p><strong>Certifications:</strong> ONLINE (SOC)</p>
+            </div>
+            <div class="team-member">
+                <img src="https://via.placeholder.com/100" alt="Sai Venkat Photo">
+                <h3>Sai Venkat</h3>
+                <p><strong>Role:</strong> Analyst 1</p>
+                <p><strong>Experience:</strong> 6 Months</p>
+                <p><strong>Certifications:</strong> ONLINE (SOC)</p>
+            </div>
         </div>
-        <div>
-            <h2>Analyst 1: Akilesh</h2>
-            <p><strong>Experience:</strong> 1.8 years</p>
-            <p><strong>Certficate:</strong> NSE 1 & 2 (SOC)</p>
-        </div>
-        <div>
-            <h2>Analyst 2: Christopher</h2>
-            <p><strong>experience:</strong> 1.8 Years</p>
-           <p><strong>Certficate:</strong> NSE 1 & 2 etc 45 + (SOC)</p>
-        </div>
-        <div>
-            <h2>Analyst 3: Dinesh.M</h2>
-            <p><strong>experience:</strong> 1.8 Years</p>
-           <p><strong>Certficate:</strong> NSE 1 & 2 etc 30 + (SOC)</p>
-        </div>
-        <div>
-            <h2>Analyst 1: Deepak</h2>
-            <p><strong>experience:</strong> 1.3 Years</p>
-             </div> <p><strong>Certficate:</strong> NSE 1 & 2 </p>
-        <div>
-            <h2>Analyst 2: Rabbani</h2>
-            <p><strong>experience:</strong> 1 Years</p>
-          <p><strong>Certficate:</strong> CEH </p>
-        </div>
-        <div>
-            <h2>Analyst 2: Apuroop</h2>
-            <p><strong>experience:</strong> 6 months </p>
-     <p><strong>Certficate:</strong>ONLINE (SOC)</p>
-        </div>
-        <div>
-            <h2>Analyst 2: Revanth </h2>
-            <p><strong>experience:</strong> 6 Months</p>
-      <p><strong>Certficate:</strong> ONLINE (SOC)</p>
-        </div>
-        <div>
-            <h2>Analyst 1: Sai Venkat</h2>
-            <p><strong>experience:</strong> 6 months</p>
-         <p><strong>Certficate:</strong> ONLINE(SOC)</p>
-        </div>
-    </div>
-</section>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 SecOps. All Rights Reserved.</p>
+    </footer>
 
 </body>
-</html>
 
+</html>
