--- a/soc.html
+++ b/soc.html
@@ -9,13 +9,14 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f2f5;
+            background-color: #0f1114;
             margin: 0;
             padding: 0;
+            color: #ecf0f1;
         }
 
         header {
-            background-color: #2c3e50;
+            background: linear-gradient(90deg, #2c3e50, #2980b9);
             color: white;
             text-align: center;
             padding: 1.5rem 0;
@@ -24,25 +25,27 @@
 
         header h1 {
             margin: 0;
-            font-size: 2.5rem;
+            font-size: 2.8rem;
             font-weight: bold;
+            text-transform: uppercase;
         }
 
         section {
             margin: 30px auto;
             width: 90%;
             max-width: 1200px;
-            background: white;
-            padding: 25px;
-            border-radius: 10px;
-            box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.1);
+            background: #1e272e;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.5);
         }
 
         h2 {
-            font-size: 1.8rem;
+            font-size: 2rem;
             text-align: center;
             margin-bottom: 20px;
-            color: #2980b9;
+            color: #00d8ff;
+            text-transform: uppercase;
         }
 
         .team {
@@ -52,42 +55,58 @@
         }
 
         .team-member {
-            background-color: #ecf0f1;
+            background-color: #273c75;
             padding: 20px;
-            border-radius: 10px;
+            border-radius: 12px;
             text-align: center;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, background-color 0.3s ease;
         }
 
         .team-member:hover {
             transform: scale(1.05);
+            background-color: #487eb0;
         }
 
         .team-member img {
-            width: 100px;
-            height: 100px;
+            width: 120px;
+            height: 120px;
             border-radius: 50%;
             margin-bottom: 15px;
-            border: 4px solid #2980b9;
+            border: 4px solid #00d8ff;
         }
 
         .team-member h3 {
             margin: 10px 0;
-            font-size: 1.3rem;
-            color: #2c3e50;
+            font-size: 1.5rem;
+            color: #ecf0f1;
         }
 
         .team-member p {
             margin: 5px 0;
-            color: #34495e;
+            color: #dcdde1;
+        }
+
+        .team-member a {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 8px 15px;
+            color: white;
+            text-decoration: none;
+            background-color: #00d8ff;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .team-member a:hover {
+            background-color: #0097e6;
         }
 
         footer {
             text-align: center;
             margin-top: 50px;
             padding: 20px;
-            background-color: #34495e;
+            background-color: #2c3e50;
             color: white;
         }
     </style>
@@ -100,69 +119,78 @@
     </header>
 
     <section>
-        <h2>Meet Our Expert Team</h2>
+        <h2>Meet Our Cybersecurity Experts</h2>
         <div class="team">
             <div class="team-member">
-                <img src="https://via.placeholder.com/100" alt="Team Lead Photo">
+                <img src="path_to_image/sunil.jpg" alt="Sunil Kumar CR Photo">
                 <h3>Sunil Kumar CR</h3>
                 <p><strong>Role:</strong> SOC Team Lead</p>
                 <p><strong>Experience:</strong> 5 Years</p>
+                <a href="path_to_resume/sunil_resume.pdf" target="_blank">View Resume</a>
             </div>
             <div class="team-member">
-                <img src="https://via.placeholder.com/100" alt="Akilesh Photo">
+                <img src="path_to_image/akilesh.jpg" alt="Akilesh Photo">
                 <h3>Akilesh</h3>
                 <p><strong>Role:</strong> Analyst 1</p>
                 <p><strong>Experience:</strong> 1.8 Years</p>
                 <p><strong>Certifications:</strong> NSE 1 & 2 (SOC)</p>
+                <a href="path_to_resume/akilesh_resume.pdf" target="_blank">View Resume</a>
             </div>
             <div class="team-member">
-                <img src="https://via.placeholder.com/100" alt="Christopher Photo">
+                <img src="path_to_image/christopher.jpg" alt="Christopher Photo">
                 <h3>Christopher</h3>
                 <p><strong>Role:</strong> Analyst 2</p>
                 <p><strong>Experience:</strong> 1.8 Years</p>
                 <p><strong>Certifications:</strong> NSE 1 & 2, 45+ more (SOC)</p>
+                <a href="path_to_resume/christopher_resume.pdf" target="_blank">View Resume</a>
             </div>
             <div class="team-member">
-                <img src="https://via.placeholder.com/100" alt="Dinesh Photo">
+                <img src="path_to_image/dinesh.jpg" alt="Dinesh Photo">
                 <h3>Dinesh M</h3>
                 <p><strong>Role:</strong> Analyst 3</p>
                 <p><strong>Experience:</strong> 1.8 Years</p>
                 <p><strong>Certifications:</strong> NSE 1 & 2, 30+ more (SOC)</p>
+                <a href="path_to_resume/dinesh_resume.pdf" target="_blank">View Resume</a>
             </div>
             <div class="team-member">
-                <img src="https://via.placeholder.com/100" alt="Deepak Photo">
+                <img src="path_to_image/deepak.jpg" alt="Deepak Photo">
                 <h3>Deepak</h3>
                 <p><strong>Role:</strong> Analyst 1</p>
                 <p><strong>Experience:</strong> 1.3 Years</p>
                 <p><strong>Certifications:</strong> NSE 1 & 2</p>
+                <a href="path_to_resume/deepak_resume.pdf" target="_blank">View Resume</a>
             </div>
             <div class="team-member">
-                <img src="https://via.placeholder.com/100" alt="Rabbani Photo">
+                <img src="path_to_image/rabbani.jpg" alt="Rabbani Photo">
                 <h3>Rabbani</h3>
                 <p><strong>Role:</strong> Analyst 2</p>
                 <p><strong>Experience:</strong> 1 Year</p>
                 <p><strong>Certifications:</strong> CEH</p>
+                <a href="path_to_resume/rabbani_resume.pdf" target="_blank">View Resume</a>
             </div>
             <div class="team-member">
-                <img src="https://via.placeholder.com/100" alt="Apuroop Photo">
+                <img src="path_to_image/apuroop.jpg" alt="Apuroop Photo">
                 <h3>Apuroop</h3>
                 <p><strong>Role:</strong> Analyst 2</p>
                 <p><strong>Experience:</strong> 6 Months</p>
                 <p><strong>Certifications:</strong> ONLINE (SOC)</p>
+                <a href="path_to_resume/apuroop_resume.pdf" target="_blank">View Resume</a>
             </div>
             <div class="team-member">
-                <img src="https://via.placeholder.com/100" alt="Revanth Photo">
+                <img src="path_to_image/revanth.jpg" alt="Revanth Photo">
                 <h3>Revanth</h3>
                 <p><strong>Role:</strong> Analyst 2</p>
                 <p><strong>Experience:</strong> 6 Months</p>
                 <p><strong>Certifications:</strong> ONLINE (SOC)</p>
+                <a href="path_to_resume/revanth_resume.pdf" target="_blank">View Resume</a>
             </div>
             <div class="team-member">
-                <img src="https://via.placeholder.com/100" alt="Sai Venkat Photo">
+                <img src="path_to_image/saivenkat.jpg" alt="Sai Venkat Photo">
                 <h3>Sai Venkat</h3>
                 <p><strong>Role:</strong> Analyst 1</p>
                 <p><strong>Experience:</strong> 6 Months</p>
                 <p><strong>Certifications:</strong> ONLINE (SOC)</p>
+                <a href="path_to_resume/saivenkat_resume.pdf" target="_blank">View Resume</a>
             </div>
         </div>
     </section>
